--- a/src/assets/components/Card.css
+++ b/src/assets/components/Card.css
@@ -11,9 +11,13 @@
   font-family: "Bangers", cursive;
 }
 
-/* .card {
-  max-height: 60vh;
-} */
+.card--price {
+  margin-bottom: 0;
+}
+
+.card--bioprice {
+  font-family: "Roboto", sans-serif;
+}
 
 .season-img {
   width: 20vw;
@@ -26,6 +30,7 @@
 .card--cover {
   width: 45vw;
   max-width: 300px;
+  vertical-align: middle;
 }
 
 .card--details {
