--- a/src/assets/components/Card.css
+++ b/src/assets/components/Card.css
@@ -1,3 +1,12 @@
+.card {
+  margin-bottom: 4px;
+  border: 2px solid #f2f2f2;
+}
+
+.card-contents {
+  padding-top: 84px;
+}
+
 .card-contents {
   width: 80%;
   margin: 0 auto;
@@ -7,8 +16,15 @@
   font-family: "Anton", sans-serif;
 }
 
+.card--stats * {
+  text-align: center;
+  margin: 0.5rem 0;
+}
+
 .card--name {
   font-family: "Bangers", cursive;
+  font-size: 36px;
+  letter-spacing: 1px;
 }
 
 .card--price {
@@ -17,10 +33,14 @@
 
 .card--bioprice {
   font-family: "Roboto", sans-serif;
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .season-img {
   width: 20vw;
+  vertical-align: auto;
 }
 
 .flex {
@@ -59,6 +79,12 @@
     margin: 0 auto;
     width: 100%;
   }
+  .card--bioprice {
+    font-family: "Roboto", sans-serif;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+  }
 }
 
 @media (max-width: 767px) {
@@ -73,5 +99,17 @@
   .season-img {
     width: 100%;
     margin: 0 auto;
+  }
+
+  .card--name {
+    font-family: "Bangers", cursive;
+    font-size: 24px;
+    letter-spacing: 1px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card-contents {
+    padding-top: 64px;
   }
 }
