--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 html,
@@ -13,7 +13,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
   height: 80px;
   width: 100%;
   position: fixed;
